--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Roswell
         run: curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
-      - name: Install Fiveam
-        run: ros install fiveam
+      # - name: Install Fiveam
+      #   run: ros install fiveam
       - name: Run Test
         run: ./test.ros
