--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: CI
 
 on:
+  pull_request:
   push:
+    branches:
+      - main
 
 jobs:
   build:
@@ -10,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Roswell
         run: curl -L https://raw.githubusercontent.com/roswell/roswell/master/scripts/install-for-ci.sh | sh
-      # - name: Install Fiveam
-      #   run: ros install fiveam
+        env:
+          LISP: sbcl-bin
       - name: Run Test
         run: ./test.ros
